Created Basic Foundation Layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="side-bar">Sidebar
+            <div class="items1">Dash</div>
+            <div class="items2">Settings <span><img src="./img/car-cog.svg" alt=""></span></div>
+            <div class="items1">Logins</div>
+        </div>
+        <div class="header">Header</div>
+        <div class="main-content">
+            <div class="heading">Heading</div>
+            <div class="card-container">
+                <div class="card item1">Card1 <div class="card item4">Card4</div>
+                </div>
+                <div class="card item2">Card2 <div class="card item5">Card5</div></div>
+                <div class="card item3">Card3 <div class="card item6">Card 6</div></div></div>
+            <div class="side-content"> <div class="announcement">Announcements</div><div class="trending">Trending</div></div>
+            </div>
+    </div>
 </body>
 </html>
