Created Semi-Responsive Design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <br><span><img src="./img/help.svg" alt=""><h3>Support</h3></span><br><span><img src="./img/theme-light-dark.svg" alt=""><h3>Dark Mode</h3></span></div></div>
             <div class="inspired"><p class="inspiration-txt">FLEET MANAGE</p><p class="credits">Inspired Partially via <a href="https://www.figma.com/community/file/907905462134453080">Figma</a> & TOP</p></div>
         </div>
-        <div class="header"><div class="top-header"><img src="./img/search.svg" id="search-icon" alt=""> <form action="#" method="get"><input type="search" name="find-records" placeholder="Quick Search" id="find-records"></form> <span></span> <img src="./img/bell-ring.svg" alt="" id="notification-icon"> 
+        <div class="header"> <div class="fillheader">
+            <div class="top-header"><img src="./img/search.svg" id="search-icon" alt=""> <form action="#" method="get"><input type="search" name="find-records" placeholder="Quick Search" id="find-records"></form> <span></span> <img src="./img/bell-ring.svg" alt="" id="notification-icon"> 
             <!-- <img src="./img/Guy 2.svg" alt="" id="pfp-icon">  -->
              <button id="out">Sign Out</button>
         
@@ -33,7 +34,7 @@
         <h3>Daneil Richard (@Daneil Richy)</h3></div> 
         <div class="ctabtn-group"><button>New</button><button>Upload Data</button><button>Give Permissions</button></div>   
     </div>
-    </div>
+    </div></div>
         <div class="main-content">
             <div class="heading"><h4>Your Metrics</h4> <h4>Announcements</h4></div>
             <div class="card-container">
